--- a/RestaurantRater/Web.config
+++ b/RestaurantRater/Web.config
@@ -11,9 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-RestaurantRater-20201109103911.mdf;Initial Catalog=aspnet-RestaurantRater-20201109103911;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+ <add name="RestaurantDbContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Restaurants.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />"
+   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
